// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultipleFileUpload renders custom class names 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-multiple-file-upload test"
    role="presentation"
    tabindex="0"
  >
    <input
      multiple=""
      style="display: none;"
      tabindex="-1"
      type="file"
    />
    Foo
  </div>
</DocumentFragment>
`;

exports[`MultipleFileUpload renders with expected class names when horizontal 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-multiple-file-upload pf-m-horizontal"
    role="presentation"
    tabindex="0"
  >
    <input
      multiple=""
      style="display: none;"
      tabindex="-1"
      type="file"
    />
    Foo
  </div>
</DocumentFragment>
`;

exports[`MultipleFileUpload renders with expected class names when not horizontal 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-multiple-file-upload"
    role="presentation"
    tabindex="0"
  >
    <input
      multiple=""
      style="display: none;"
      tabindex="-1"
      type="file"
    />
    Foo
  </div>
</DocumentFragment>
`;
